# Neuroadaptive-Infotainment-System

./: README.md
AdVitam(Sleepiness label)/: .cursorignore  .env.template  README.md  README_PIPELINE.md  best_model.pth  main.py  pyproject.toml  requirements.txt
AdVitam(Sleepiness label)/configs/: arch_ablation.yaml  baseline.yaml
AdVitam(Sleepiness label)/notebooks/: model-initial-advitam.ipynb  model-test-spectogram-advitam.ipynb
AdVitam(Sleepiness label)/notebooks/initial/: eda-advitam-sleep-dataset.ipynb  eda-advitam-sleep-processed-isla.ipynb  eda-advitam-sleep-raw.ipynb  eda-advitam-sleep.ipynb
AdVitam(Sleepiness label)/notebooks/output/: event_markers_analysis.csv
AdVitam(Sleepiness label)/research/: notes-temporal-mismatch.md
AdVitam(Sleepiness label)/results/10_experiment_20250708_225146/: config.yaml  history.json  metrics.json
AdVitam(Sleepiness label)/results/11_experiment_20250708_225220/: config.yaml  history.json
AdVitam(Sleepiness label)/results/12_experiment_20250708_230243/: history.json  model.pth
AdVitam(Sleepiness label)/results/13_experiment_20250708_230343/: config.yaml  history.json  metrics.json
AdVitam(Sleepiness label)/results/14_experiment_20250708_230834/: config.yaml  history.json  metrics.json  model.pth
AdVitam(Sleepiness label)/results/15_experiment_20250708_231313/: config.yaml  history.json  metrics.json  model.pth  scaler.pkl
AdVitam(Sleepiness label)/results/16_experiment_20250708_231601/: config.yaml  (+2 more)
AdVitam(Sleepiness label)/scripts/: collect_evaluation_metrics.py  download_advitam.py  setup_data_folder.py
(+102 files in other folders)
